# betavLLM

./: .gitignore  CMakeLists.txt  Makefile  README.md  runall.sh
docs/superpowers/specs/: 2026-06-20-cpp-betavllm-design.md
include/: activation_buffer.hpp  input_ids.hpp  model_config.hpp  model_loader.hpp  tokenizer.hpp
include/layers/: embedding.hpp  rmsnorm.hpp
src/: activation_buffer.cpp  input_ids.cpp  main.cpp  tokenizer.cpp
src/layers/: embedding.cu  rmsnorm.cu
tests/: CMakeLists.txt  test_embedding_kernel.cu  test_model_loader.cpp  test_rmsnorm_kernel.cu  test_tokenizer.cpp  test_utils.hpp
